# Coffee-Analysis

./: CMakeLists.txt  README.md
images/: healthy.tif  healthy2.tif  healthy_1.tif  healthy_2.tif  healthy_3.tif  insect_attack_3.tif  insect_attack_4.tif  insect_attack_big.tif  insect_attack_small.tif  mech_damaged_1.tif  mech_damaged_2.tif  mech_damaged_3.tif  mech_damaged_4.tif
src/: bean.cpp  bean.h  centroid.cpp  centroid.h  image.cpp  image.h  main.cpp  utils.h  vutils.h
